# otclient

./: AGENTS.md  AGENT_HANDOFF.md  CMakePresets.json  CONTRIBUTING.md  SECURITY.md  init.lua
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  protocol-compatibility.yaml  request.yaml
.github/pr9-patch/: READY  part-00.patch  part-01.patch  part-02.patch  part-03.patch  part-04.patch  part-05.patch  part-06.patch  part-07.patch  part-08.patch
.github/workflows/: apply-pr9-windows-link-fix.yml  ci.yml  clean-cache.yaml  cron-stale.yml  dependabot-automerge.yml  dependabot-metadata.yml  diagnose-pr9-log.yml  docker-publish.yml  export-pr9-source.yml  infrastructure-retry.yml  issue.yml  pr-labeler.yml  reusable-build-android-apk.yml  reusable-build-browser.yml  reusable-build-docker.yml  reusable-build-linux.yml  reusable-build-macos.yml  reusable-build-windows.yml  reusable-checks.yml  reusable-tests-lua.yml  temporary-http-header-cleanup.yml  temporary-oteryn-account-ui.yml  temporary-oteryn-loopback-refactor.yml  (+5 more)
docs/: regression-test-backlog.md  repository-governance.md  testing-strategy.md
scripts/: configure-github-repository.sh
tests/: CMakeLists.txt
tests/fixtures/otml/: invalid_indentation.otml  nested_styles.otml
tests/integration/protocol/: CMakeLists.txt  loopback_packet_test.cpp
tests/lua/: CMakeLists.txt
tests/lua/contracts/: oteryn_identity_core_test.lua  resource_types_test.lua
tests/lua/fixtures/: intentional_failure.lua
tests/lua/helpers/: runner.lua  stubs.lua  verify_runner_failure.cmake
tests/lua/unit/: gamelib_util_test.lua
tests/otml/: CMakeLists.txt  otml_fixture_test.cpp
tests/support/assertions/: message_assertions.h  tile_assertions.h
tests/support/builders/: input_message_builder.cpp  input_message_builder.h  output_message_inspector.h  thing_builders.cpp  thing_builders.h
tests/support/mocks/: fake_game_state.h  fake_protocol_callback_receiver.h  fake_resources.h
tests/support/test_environment/: test_environment.cpp  test_environment.h
tests/unit/: CMakeLists.txt
tests/unit/framework/: CMakeLists.txt  inputmessage_test.cpp  outputmessage_test.cpp  platform_open_url_test.cpp
tests/unit/map/: CMakeLists.txt  tile_order_test.cpp
tests/unit/protocol/: CMakeLists.txt  protocol_game_lifecycle_test.cpp  protocol_send_serializer_test.cpp  resource_contract_test.cpp
tests/unit/support/: CMakeLists.txt  test_support_test.cpp
(+49 files in other folders)
